--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
 			<version>5.6.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.github.theangrydev.fluentbdd</groupId>
+			<artifactId>mockito-extensions</artifactId>
+			<version>8.2.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
