--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,21 @@
 			<artifactId>mockito-extensions</artifactId>
 			<version>8.2.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.spring4all</groupId>-->
+			<!--<artifactId>swagger-spring-boot-starter</artifactId>-->
+			<!--<version>1.9.0.RELEASE</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
